heavy api rework

--- a/website/apps/aplayer/templates/aplayer/base.html
+++ b/website/apps/aplayer/templates/aplayer/base.html
@@ -43,7 +43,7 @@
 		//<![CDATA[//><!--
 		
 		var settings = settings || {};
-		settings.debug = false;
+		settings.debug = true;
 				
 		// local / window-dependent container
 		var local = local || {};
