--- a/website/templates/element/chat/_message_list.html
+++ b/website/templates/element/chat/_message_list.html
@@ -2,7 +2,7 @@
 
 
 
-{% addtoblock "js-post" %}<script src="http://localhost:8888/socket.io/socket.io.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}<!--<script src="http://localhost:8888/socket.io/socket.io.js"></script>-->{% endaddtoblock %}
 
 {% addtoblock "js-post" %}
 
