--- a/website/apps/abcast/templates/abcast/templatetags/on_air_inline.html
+++ b/website/apps/abcast/templates/abcast/templatetags/on_air_inline.html
@@ -1,7 +1,8 @@
-{% load sekizai_tags verbatim i18n %}
+{% load sekizai_tags verbatim i18n pushy_tags%}
 
 {% addtoblock "js-post" %}<script src="{{ STATIC_URL }}abcast/js/lib/jquery.countdown.js"></script>{% endaddtoblock %}
 {% addtoblock "js-post" %}<script src="{{ STATIC_URL }}abcast/js/on_air.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}{% pushy_scripts %}{% endaddtoblock %}
 {% addtoblock "js-post" %}
 <script>
 	$(function(){
@@ -16,6 +17,12 @@
 {% endaddtoblock %}
 
 <div class="on-air-container" id="on_air_app">
+	<div class="actions">
+		<ul class="unstyled horizontal pull-right">
+			<li class=""><a href="#" class="streamable popup" data-resource_uri="{% url api_dispatch_list resource_name='abcast/channel' api_name='v1'%}1/"><i class="icon-play"></i> {% trans "Tune in" %}</a></li>
+		</ul>
+		<div class="clear"></div>
+	</div>
 	<div class="emission">
 
 	</div>
