--- a/website/site-static/sass/apps/_on_air.sass
+++ b/website/site-static/sass/apps/_on_air.sass
@@ -1,6 +1,8 @@
 .on-air-container
   padding: 5px 0
   background: #fafafa
+  .channel
+    padding: 0 5px
   .emission
     padding: 0 5px
     // background: orange
@@ -25,5 +27,8 @@
         display: inline
       
     > div.past
+    
+  .count
+    padding: 0 5px
     
     
