--- a/website/apps/abcast/templates/abcast/schedule.html
+++ b/website/apps/abcast/templates/abcast/schedule.html
@@ -38,7 +38,10 @@ $(function () {
 	
 	scheduler.app.pph = '{{ pph }}';
 	scheduler.app.ppd = '{{ ppd }}';
+	scheduler.app.offset = '{{ offset }}';
 	scheduler.app.num_days = '{{ num_days }}';
+	scheduler.app.range_filter = '{{ range_filter }}';
+	scheduler.app.station_time = '{{ station_time }}';
 	
 	scheduler.app.init();
 	
