--- a/website/site-static/sass/apps/_base.sass
+++ b/website/site-static/sass/apps/_base.sass
@@ -4,5 +4,6 @@
 @import apps/notification
 @import apps/shortcutter
 @import apps/on_air
+@import apps/lookup
 // @import apps/scheduler // stand-alone file a.t.m.
 
