--- a/website/apps/alibrary/templates/alibrary/release_edit.html
+++ b/website/apps/alibrary/templates/alibrary/release_edit.html
@@ -5,136 +5,169 @@
 {% load thumbnail i18n truncate %}
 
 {% block heading %} <!-- heading / icon (large one) -->
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}selectable/js/jquery.dj.selectable.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}ac_tagging/js/jquery.tag-it.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}dajax/jquery.dajax.core.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}selectable/js/jquery.dj.selectable.js"></script>
+    {% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}ac_tagging/js/jquery.tag-it.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}dajax/jquery.dajax.core.js"></script>{% endaddtoblock %}
+
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/edit.js"></script>{% endaddtoblock %}
 
 
+    {% addtoblock "js-post" %}
+        <script>
+            $(function () {
+                $('.save-and-publish').click(function () {
+                    $('.form-actions #div_id_publish input').prop('checked', true);
+                });
 
-{% addtoblock "js-post" %}
-<script>
-	$(function(){
-		$('.save-and-publish').click(function(){
-			$('.form-actions #div_id_publish input').prop('checked', true);
-		});
-		
-		$('select[readonly] option[selected]').each(function(i, el){
-			var val = $(el).text();
-			$(el).parents('.control-group').html('<span>' + val + '</span>');
-		});
-		
-		
-		// label shortcuts
-		$('.action.label-select').on('click', 'a', function(e){
-			e.preventDefault();
-			var val = $(this).data('label');
-			$('input#id_label_0').val(val);
-			$('input#id_label_0').focus();
-			$('input#id_label_0').blur();
-		});
+                $('select[readonly] option[selected]').each(function (i, el) {
+                    var val = $(el).text();
+                    $(el).parents('.control-group').html('<span>' + val + '</span>');
+                });
 
-		
-	});
-</script>
-{% endaddtoblock %}
 
-{% addtoblock "css" %}
-<style>
-	.form-actions #div_id_publish {
-		display: none;
-	}
-</style>
-{% endaddtoblock %}
+                // label shortcuts
+                $('.action.label-select').on('click', 'a', function (e) {
+                    e.preventDefault();
+                    var val = $(this).data('label');
+                    $('input#id_label_0').val(val);
+                    $('input#id_label_0').focus();
+                    $('input#id_label_0').blur();
+                });
 
-<div id="heading">
-	{% include "skeleton/heading.html" %}
-</div>
-<!-- heading / icon (large one) -->
+
+            });
+        </script>
+    {% endaddtoblock %}
+
+    {% addtoblock "css" %}
+        <style>
+            .form-actions #div_id_publish {
+                display: none;
+            }
+        </style>
+    {% endaddtoblock %}
+
+    <div id="heading">
+        {% include "skeleton/heading.html" %}
+    </div>
+    <!-- heading / icon (large one) -->
 {% endblock %}
 
 {% block modnav %} <!-- start: intra-module navigation -->
-<div id="modnav">
-	{% include "skeleton/modnav.html" %}
-</div>
-<!-- end: intra-module navigation -->
+    <div id="modnav">
+        {% include "skeleton/modnav.html" %}
+    </div>
+    <!-- end: intra-module navigation -->
 {% endblock %}
 
 {% block inner %}
-<div class="item_detail" style="">
+    <div class="item_detail" style="">
 
-	<section class="shaded">
-		<div class="row iteminfo release">
-			{% include "alibrary/release/_detail_info.html" %}
-		</div>
-	</section>
+        <section class="shaded">
+            <div class="row iteminfo release">
+                {% include "alibrary/release/_detail_info.html" %}
+            </div>
+        </section>
 
-	<div class="item_menu" id="item_menu"></div>
+        <div class="item_menu" id="item_menu"></div>
 
-	<div class="clear"></div>
+        <div class="clear"></div>
 
-</div>
+    </div>
 {% endblock %}
 
 {% block sidebar %}
-{% include "alibrary/release/sidebar/_edit.html" %}
+    {% include "alibrary/release/sidebar/_edit.html" %}
 {% endblock %}
 
 {% block form %}
-<div class="item_inner">
+    <div class="item_inner">
 
-	<form class="form-horizontal form-compact form-release" method="post" id="" enctype="multipart/form-data">
+        <form class="form-horizontal form-compact form-release" method="post" id="" enctype="multipart/form-data">
 
-		{{ form.management_form }}
-		{{ relation_form.management_form }}
-		{{ releasemedia_form.management_form }}
+            {{ form.management_form }}
+            {{ relation_form.management_form }}
+            {{ releasemedia_form.management_form }}
 
-		{% crispy action_form %}
+            {% crispy action_form %}
 
 
-		{% crispy form %}
-		
-		
+            {% crispy form %}
 
-		<fieldset>
-			<legend>
-				Relations<span class="pull-right">Help</span>
-			</legend>
-		
 
-		{% crispy relation_form %}
-		
-		</fieldset>
-		
-		{% crispy action_form %}
-		
+            <fieldset>
+                <legend>
+                    Relations<span class="pull-right">Help</span>
+                </legend>
 
-		<fieldset>
-			<legend>
-				Tracklist
-			</legend>
-		</fieldset>
-		
-		
-		{% crispy release_bulkedit_form %}
-		
-		{% crispy releasemedia_form %}
 
-		
-		
-		{% crispy action_form %}
-		
+                {% crispy relation_form %}
 
-	</form>
+            </fieldset>
 
-</div>
+            {% crispy action_form %}
+
+
+            <fieldset>
+                <legend>
+                    Tracklist
+                </legend>
+            </fieldset>
+
+
+            {% crispy release_bulkedit_form %}
+
+            <div id="release_media_form">
+                <!-- offset selector -->
+
+
+                <div class="form-header row-fluid">
+
+                    <div id="editor_mode_switch" class="span6">
+                        <ul class="unstyled horizontal">
+                            <li>Display</li>
+                            <li><a data-mode="extended" href="#"><i class="icon-th-list"></i></a></li>
+                            <li><a data-mode="condensed" href="#"><i class="icon-list"></i></a></li>
+                        </ul>
+                    </div>
+
+                    <div id="offset_selector" class="span6">
+                        <ul class="unstyled horizontal pull-right">
+                            <li><span>Shift lookup-results:</span></li>
+                            <li><a href="#" data-offset="subtract"><i class="icon-caret-up icon-large"></i></a></li>
+                            <li><a href="#" data-offset="add"><i class="icon-caret-down icon-large"></i></a></li>
+                            <li style="clear: both;"></li>
+                        </ul>
+                    </div>
+                    <div class="clearfix"></div>
+
+
+                </div>
+
+
+                {% crispy releasemedia_form %}
+            </div>
+
+
+            {% crispy action_form %}
+
+
+        </form>
+
+    </div>
 {% endblock %}
 
 {% block form_sidebar %}
-<div class="sidebar form-sidebar holder">
-	{% with providers=object.get_lookup_providers%}
-	{% include "alibrary/form_lookup/_providers.html" %}
-	{% endwith %}
-</div>
+    <div class="sidebar form-sidebar holder">
+        {% with providers=object.get_lookup_providers %}
+            {% include "alibrary/form_lookup/_providers.html" %}
+        {% endwith %}
+    </div>
 {% endblock %}
 
