--- a/website/apps/importer/templates/importer/import_form.html
+++ b/website/apps/importer/templates/importer/import_form.html
@@ -163,13 +163,17 @@ $(document).ready(function() {
 </section>
 
 <section class="importer-importfiles">
-	
+
 	<div class="page-header">
 		<h2>Review <small>your uplads and confirm additions</small></h2>
 	</div>
 
 	<div class="listing">
-		<div id="result_holder"></div>
+		<div id="result_holder">
+
+            <p>{% trans "Loading import" %}</p>
+
+		</div>
     </div>
 
 </section>
