--- a/website/site-static/sass/element/legacy/_colorbox.sass
+++ b/website/site-static/sass/element/legacy/_colorbox.sass
@@ -61,7 +61,7 @@
   padding: 1px
 
 #cboxLoadingGraphic
-  background: url(/media/css/img/colorbox/loading.gif) no-repeat center center
+  // background: url(/media/css/img/colorbox/loading.gif) no-repeat center center
 
 #cboxLoadingOverlay
   // background: #333
@@ -84,7 +84,7 @@
   height: 20px
   position: absolute
   top: -20px
-  background: url(/media/css/img/colorbox/controls.png) no-repeat 0 0
+  // background: url(/media/css/img/colorbox/controls.png) no-repeat 0 0
 
 #cboxPrevious
   background-position: 0px 0px
