--- a/website/apps/alibrary/templates/alibrary/playlist_edit.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_edit.html
@@ -71,7 +71,7 @@
 <div class="item_detail" style="">
 
 	<section class="shaded">
-		<div class="row iteminfo release">
+		<div class="row iteminfo playlist">
 			{% include "alibrary/playlist/_detail_info.html" %}
 		</div>
 	</section>
