--- a/website/apps/importer/templates/importer/import_form_pushy.html
+++ b/website/apps/importer/templates/importer/import_form_pushy.html
@@ -171,7 +171,11 @@ $(document).ready(function() {
 	</div>
 
 	<div class="listing">
-		<div id="result_holder"></div>
+		<div id="result_holder">
+
+            <p>{% trans "Loading import" %}</p>
+
+		</div>
     </div>
 
 </section>
