--- a/website/site-static/sass/apps/_base.sass
+++ b/website/site-static/sass/apps/_base.sass
@@ -5,5 +5,6 @@
 @import apps/shortcutter
 @import apps/on_air
 @import apps/lookup
+@import apps/selectable
 // @import apps/scheduler // stand-alone file a.t.m.
 
