--- a/website/site-static/sass/apps/_base.sass
+++ b/website/site-static/sass/apps/_base.sass
@@ -6,5 +6,6 @@
 @import apps/on_air
 @import apps/lookup
 @import apps/selectable
+@import apps/alibrary
 // @import apps/scheduler // stand-alone file a.t.m.
 
