--- a/website/site-static/sass/site/_style.sass
+++ b/website/site-static/sass/site/_style.sass
@@ -3,3 +3,10 @@ body
     background-image: url(/static/img/base/link.external.png)
     background-repeat: no-repeat
     padding-left: 16px
+
+
+  &.tl-loading
+    .container.main
+      opacity: 0.8
+      *
+        color: #999 !important
