--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -42,9 +42,14 @@
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.ajaxqueue.js"></script>{% endaddtoblock %}
 	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/ba-debug.js"></script>{% endaddtoblock %}
-	
-	{% addtoblock "js-post" %}<!--<script type="text/javascript" src="{{ STATIC_URL }}js/lib/turbolinks.js"></script>-->{% endaddtoblock %}
-	
+
+
+	{% addtoblock "js-post" %}
+        <!--
+        <script type="text/javascript" src="{{ STATIC_URL }}js/lib/turbolinks.js"></script>
+        -->
+    {% endaddtoblock %}
+
 	{% addtoblock "js-post" %}<!--<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.autocomplete.js"></script>-->{% endaddtoblock %}
 	
 	
