--- a/website/templates/refactoring.html
+++ b/website/templates/refactoring.html
@@ -1,4 +1,4 @@
-{% load compress cms_tags sekizai_tags value_from_settings %}
+{% load compress cms_tags sekizai_tags value_from_settings esi %}
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}">
 {% spaceless %}
