--- a/website/apps/alibrary/templates/alibrary/artist/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/artist/list_item_s.html
@@ -2,7 +2,7 @@
 
 <!-- list item s -->
 
-<div class="list_body_row selectable view edit stream collect download" id="list_item_16183">
+<div class="list_body_row selectable view edit stream collect download" id="list_item_{{ item.pk }}">
 	<div class="list_body_item c1 image_center_bg" {% if item.main_image %}style="background-image: url({% thumbnail item.main_image 36x36 crop upscale subject_location=item.main_image.subject_location %});"{% endif %}>
 		<ul class="unstyled">
 			<!-- Play link  -->
