--- a/website/apps/alibrary/templates/alibrary/release/sidebar/context/_list.html
+++ b/website/apps/alibrary/templates/alibrary/release/sidebar/context/_list.html
@@ -3,14 +3,15 @@
 <div id="menu_context" class="menu_context">
 	<div class="set">
 		<ul class="unstyled">
-			<!-- Menu element / Action -->
+			<!-- Menu element / Action
 			<li class="action disabled selection_required selection_single selection_delete ">
 				<span class="left icon"> <a href="#release" title="Delete Selection">Delete Selection</a> </span>
 				<span class="opt"></span>
 				<span class="clear"></span>
-			</li><!-- Menu element / Action -->
+			</li> -->
+            <!-- Menu element / Action -->
 			<li class="action disabled selection_required selection_multiple selection_merge ">
-				<span class="left icon"> <a href="#release" title="Merge Selection">Merge Selection</a> </span>
+				<span class="left icon"> <a href="#" data-action="merge" data-ct="release" title="Merge Selection">Merge Selection</a> </span>
 				<span class="opt"></span>
 				<span class="clear"></span>
 			</li><!-- Menu element / Action -->
