--- a/website/templates/layout_base.html
+++ b/website/templates/layout_base.html
@@ -1,9 +1,10 @@
 {% extends "refactoring.html" %}
 
-{% load menu_tags %}
+{% load menu_tags esi %}
 
 {% block toolbar %}
 {% include "skeleton/toolbar.html" %}
+{# esi for user template 'skeleton/toolbar.html' timeout 1200 #}
 {% endblock %}
 
 {% block main %}
