--- a/website/apps/alibrary/templates/alibrary/element/___filterbox.html
+++ b/website/apps/alibrary/templates/alibrary/element/___filterbox.html
@@ -1,7 +1,5 @@
 {% load spurl %}
 
-{{ item.form.as_p }}
-
 
 <div class="box ">
     <div class="ui-persistent boxtitle" data-uistate="init" id="filterbox-{{ item.name }}">
@@ -11,20 +9,15 @@
 
         {% for filter_entry in item.entries %}
 
-
             {% if filter_entry.0 %}
 
                 {% spurl base=request.get_full_path active_mquery="{{ item.name }}={{ filter_entry.0 }}" as is_active %}
                 <div class="boxitem {% if is_active %}minus{% else %}plus{% endif %}">
                     <a id="filterbox_item-{{ filter_entry.0 }}" class="filterbox_item {% if is_active %}on{% endif %}"
                        href="{% spurl base=request.get_full_path remove_query_param="page" trigger_mquery="{{ item.name }}={{ filter_entry.0 }}" %}"
-                       style="display: block;">
-                        {% if filter_entry.2 %}
-                            {{ filter_entry.2 }}
-                        {% else %}
-                            {{ filter_entry.0 }}
-                        {% endif %}
-                        <small> ({{ filter_entry.1 }})</small>
+                       style="display: block;">{{ filter_entry.0 }}
+                    <small> ({{ filter_entry.1 }})
+                    </small>
                     </a>
                 </div>
 
