heavy speed increase!

--- a/website/apps/importer/templates/importer/import_form_pushy.html
+++ b/website/apps/importer/templates/importer/import_form_pushy.html
@@ -219,8 +219,9 @@ $(document).ready(function() {
 <div class="sidebar playlist-container">
 	
 	{% playlists_inline %}
-	<div class="actions">
-		<a href="#" class="pull-right btn btn-mini btn-primary add-all-to-playlist">{% trans "Add imported files to current basket" %}</a>
+
+	<div class="actions" style="margin-top: 12px;">
+		<a href="#" class="pull-right btn btn-mini add-all-to-playlist">{% trans "Add imported files to current basket" %}</a>
 	</div>
 
 
